added up to using the skeleton stack

--- a/src/pages/my-teams/my-teams.page.html
+++ b/src/pages/my-teams/my-teams.page.html
@@ -5,13 +5,13 @@
         </button>
         <ion-title>Elite Schedule</ion-title>
     </ion-navbar>
-    <ion-toolbar color="secondary">
+    <!--<ion-toolbar color="secondary">
         <ion-title>My Teams</ion-title>
-    </ion-toolbar>
+    </ion-toolbar>-->
 </ion-header>
 
-<ion-content>
-    <ion-card *ngIf="!favorites">
+<ion-content padding>
+    <!--<ion-card *ngIf="!favorites">
         <ion-card-header class="my-teams-header">No Followed Teams</ion-card-header>
         <ion-card-content>
             <p>You are not currently following any teams.</p>
@@ -34,14 +34,14 @@
                 <p>{{item.tournamentName}}</p>
             </button>
         </ion-list>
-        <ion-card-content>
+        <ion-card-content>-->
             <p>To follow more teams, select a tournament, 
-                then you can follow teams from their team page.</p>    
+                then you can follow teams from their team page.</p>   
             <button icon-left ion-button full (click)="goToTournaments()">
                 <ion-icon name="search"></ion-icon>
                 Find a Tournament
             </button>
-        </ion-card-content>
-    </ion-card>
+        <!--</ion-card-content>
+    </ion-card>-->
 
 </ion-content>
