arrived at navbars and toolbars

--- a/src/pages/my-teams/my-teams.page.html
+++ b/src/pages/my-teams/my-teams.page.html
@@ -1,13 +1,13 @@
 <ion-header>
-    <ion-navbar color="primary">
+    <ion-navbar primary color="primary">
         <button menuToggle ion-button icon-only>
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>Elite Schedule</ion-title>
     </ion-navbar>
-    <!--<ion-toolbar color="secondary">
+    <ion-toolbar secondary color="secondary">
         <ion-title>My Teams</ion-title>
-    </ion-toolbar>-->
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
