--- a/src/pages/tournaments/tournaments.page.html
+++ b/src/pages/tournaments/tournaments.page.html
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>tournaments</ion-title>
+    <ion-title>Select a Tournament</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+   <button icon-left ion-button full (click)="navigate()">Back</button>
 </ion-content>
